; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-set-disable-mempool.c_thread.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-set-disable-mempool.c_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NUM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32**, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32**
  store i32** %5, i32*** %3, align 8
  %6 = load i32**, i32*** %3, align 8
  %7 = ptrtoint i32** %6 to i32
  %8 = call i32 @assert_se(i32 %7)
  %9 = load i32**, i32*** %3, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = ptrtoint i32* %10 to i32
  %12 = call i32 @assert_se(i32 %11)
  %13 = call i32 (...) @is_main_thread()
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert_se(i32 %16)
  %18 = load i32**, i32*** %3, align 8
  %19 = load i32*, i32** %18, align 8
  %20 = call i64 @set_size(i32* %19)
  %21 = load i64, i64* @NUM, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert_se(i32 %23)
  %25 = load i32**, i32*** %3, align 8
  %26 = load i32*, i32** %25, align 8
  %27 = call i32* @set_free(i32* %26)
  %28 = load i32**, i32*** %3, align 8
  store i32* %27, i32** %28, align 8
  ret i8* null
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @is_main_thread(...) #1

declare dso_local i64 @set_size(i32*) #1

declare dso_local i32* @set_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
